--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "start": "nodemon index.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "express-validator": "^7.2.1",
+    "node-cache": "^5.1.2",
     "node-fetch": "^2.7.0",
     "nodemon": "^3.1.10"
   }
